# geo1015_hw03

./: CMakeLists.txt
data/: bk_example_output.ply  bk_sub25m.ply  params.json
src/: CMakeLists.txt  PlaneDetector.cpp  PlaneDetector.h  main.cpp
src/Viewer/: ArcBallCamera.h  PointShader.cpp  PointShader.frag  PointShader.h  PointShader.vert  Viewer.cpp  resources.conf
